# hosted-compiler

./: .gitignore  Dockerfile  LICENSE  README.md  ape-config.yaml  artifact_sample.json  client.py  dev-requirements.txt  main.py  pyproject.toml  requirements.txt  sample_manifest.json  samplejson.json  setup.cfg  test_app.py  vvm_versions.py
.github/workflows/: cicd.yaml
contracts/: ERC20.vy  example.vy  fail_misspell.vy  fail_pragma.vy  pass_ERC20.vy  pass_Token.vy  pass_auctions.vy
scripts/: client.py
tests/: conftest.py  test_app.py
