[tool.poetry]
name = "hosted-compiler"
version = "0.1.0"
description = ""
authors = ["ApeWorX <admin@apeworx.io>"]
readme = "README.md"
packages = [
    { include = "main.py" }
]

[tool.poetry.dependencies]
python = "~3.11"
eth-ape = "^0.8.14"
ape-vyper = "^0.8.00"
fastapi = "^0.104.1"
# NOTE: Pinning to v1 until ape supports v2, because otherwise FastAPI barfs
pydantic = "^2.00"
uvicorn = { version = "^0.24.0", extras = ["standard"] }
vvm = "^0.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.7.1"
isort = "^5.12.0"
ipython = "^8.18.0"
pytest = "^8.0.0"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '\.git/|\.mypy_cache/|\.venv/'

[tool.isort]
line_length = 100
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true
src_paths = ["main.py", "test_app.py"]

[tool.mypy]
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
